Revision history for Perl extension ExtUtils::Depends.

    - fix UNC path bug - https://rt.cpan.org/Ticket/Display.html?id=102436

0.8001
    - Remove hack (cf https://rt.cpan.org/Ticket/Display.html?id=45224)
      The hijacking of EUMM's `static_lib` method is now obsolete, as well as
      causing problems.
    - Also added a couple of code tidy-ups

0.8000
    - Bump version so https://metacpan.org/pod/ExtUtils::Depends shows the
      correct _ExtUtils::Depends_ module
    - Quote directories with spaces

0.405
    - Remove MYMETA.* from MANIFEST file; closes autogenerated RT ticket
      #108554

0.404
    - Depends.pm: sort deps in save_config() and get_makefile_vars(); patch
      submitted by Debian's reproducible build team for RT#101602
    - Use / to make ::load filename, not File::Spec - perldoc -f require

0.403
    - Avoid using Test::More::done_testing() for to support building
      out-of-the-box on older perls.

0.402 Sat Oct 18 18:06:19 EEST 2014
    - Set Data::Dumper::Sortkeys = 1 in ExtUtils::Depends->save_config();
      patch submitted by Niko Tyni of the Debian Perl Group; fixes RT#99260

0.401 Sat Aug 23 14:20:11 IRKT 2014
    - Add README changes created by 'make dist' from the POD
    - Rename test modules
    - Test old/new schemes with .pm files
    - Move old/new scheme tests from middle of other stuff to end
    - Rename test packages to 8.3 unique

0.400 Sun Aug 10 13:58:24 CEST 2014
    - In addition to the package variables $inc, $libs and @typemaps, write an
      'Inline' method to <package>::Install::Files for easier interoperability
      with the Inline module.
    - Accompany the 'Inline' method with a 'deps' method in
      <package>::Install::Files in addition to the @deps package variable.
    - Make ExtUtils::Depends->load use the 'Inline' and 'deps' methods by
      default, falling back to the package variables if the methods are not
      defined.